// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add provider 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"module\\": {
    \\"test_DBA94737\\": {
      \\"providers\\": [
        {
          \\"test\\": \\"test.provider1\\"
        }
      ],
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test_DBA94737\\"
        }
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider1\\"
      }
    ]
  }
}"
`;

exports[`complex providers 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider1\\"
      },
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider2\\"
      }
    ]
  },
  \\"module\\": {
    \\"test_DBA94737\\": {
      \\"providers\\": [
        {
          \\"test.src\\": \\"test.provider1\\"
        },
        {
          \\"test.dst\\": \\"test.provider2\\"
        }
      ],
      \\"param1\\": \\"name\\",
      \\"param2\\": 1,
      \\"param3\\": [
        \\"id1\\",
        \\"id2\\"
      ],
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test_DBA94737\\"
        }
      }
    }
  }
}"
`;

exports[`minimal configuration 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"module\\": {
    \\"test_DBA94737\\": {
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test_DBA94737\\"
        }
      }
    }
  }
}"
`;

exports[`multiple providers 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider1\\"
      },
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider2\\"
      }
    ]
  },
  \\"module\\": {
    \\"test_DBA94737\\": {
      \\"providers\\": [
        {
          \\"test\\": \\"test.provider1\\"
        },
        {
          \\"test\\": \\"test.provider2\\"
        }
      ],
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test_DBA94737\\"
        }
      }
    }
  }
}"
`;

exports[`pass variables 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"module\\": {
    \\"test_DBA94737\\": {
      \\"param1\\": \\"name\\",
      \\"param2\\": 1,
      \\"param3\\": [
        \\"id1\\",
        \\"id2\\"
      ],
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test_DBA94737\\"
        }
      }
    }
  }
}"
`;

exports[`reference module 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"module\\": {
    \\"test_DBA94737\\": {
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test_DBA94737\\"
        }
      }
    }
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"test_resource_368FC2EC\\": {
        \\"name\\": \\"\${module.test_DBA94737.name}\\",
        \\"//\\": {
          \\"metadata\\": {
            \\"path\\": \\"test/resource\\",
            \\"uniqueId\\": \\"test_resource_368FC2EC\\"
          }
        }
      }
    }
  }
}"
`;

exports[`set variable 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"module\\": {
    \\"test_DBA94737\\": {
      \\"param1\\": \\"value1\\",
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test_DBA94737\\"
        }
      }
    }
  }
}"
`;

exports[`simple provider 1`] = `
"{
  \\"//\\": {
    \\"metadata\\": {
      \\"version\\": \\"stubbed\\",
      \\"stackName\\": \\"test\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
        \\"access_key\\": \\"key\\",
        \\"alias\\": \\"provider1\\"
      }
    ]
  },
  \\"module\\": {
    \\"test_DBA94737\\": {
      \\"providers\\": [
        {
          \\"test\\": \\"test.provider1\\"
        }
      ],
      \\"source\\": \\"./foo\\",
      \\"//\\": {
        \\"metadata\\": {
          \\"path\\": \\"test/test\\",
          \\"uniqueId\\": \\"test_DBA94737\\"
        }
      }
    }
  }
}"
`;
